# CharShift

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  PRODUCT.md  README.md  build.rs  tauri.conf.json  untitled.pen
.github/workflows/: release.yml
build-scripts/: README.md  build-windows.ps1
public/: app.js  index.html  styles.css
src/: bin_test.rs  main.rs  types.rs
src/file/: converter.rs  detector.rs  locker.rs  mod.rs  scanner.rs
