[package]
name = "code-convertor"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
walkdir = "2"
content_inspector = "0.2.4"
chardet = "0.2"
encoding_rs = "0.8"
encoding_rs_io = "0.1"
filetime = "0.2"
rfd = "0.14"
